<resources>
    <string name="app_name">ProyectoFinal1aEvMRubioS</string>
    <string name="proyecto_final">Proyecto Final</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="iniciar_sesi_n_con_google">Iniciar Sesión con Google</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Continua</string>
    <string name="descripcion">Esta aplicación es una muy básica guía sobre el pokemon go.\nAquí podrás consultar donde hay gimnasios en Cella, \nY ver un listado con todos los Pokemon añadidos y sus\nestadisticas\n\n
    Para navegar por la aplicacion puedes pulsar donde veas una imagen</string>
    <string name="sobre_la_app">Sobre la app</string>
    <string name="first_fragment_label">fragment_first</string>
    <string name="second_fragment_label">fragment_second</string>
    <string name="lista">Lista</string>
    <string name="gimnasios">Gimnasios</string>
    <string name="id">Id</string>
    <string name="forma">Forma</string>
    <string name="nombre">Nombre</string>
    <string name="ataque">Ataque</string>
    <string name="defensa">Defensa</string>
    <string name="stamina">Stamina</string>
    <string name="filtro">Filtro</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ayunta">Ayuntamiento</string>
    <string name="correos">Correos</string>
    <string name="ermitaAntonio">Ermita San Antonio</string>
    <string name="skate">SkatePark</string>
    <string name="casadecultura">Casa de Cultura</string>
    <string name="fronton">Fronton</string>
    <string name="pistaFutbol">Pista de futbol</string>
    <string name="ermitaSebastian">Ermita de San Sebastian</string>
    <string name="ermitaLorenzo">Ermita del Loreto</string>
    <string name="parque">Parque</string>
    <string name="barras">Barras</string>
    <string name="flores">Mural cerámico de las flores</string>
    <string name="fuentePlaza">Fuente de la plaza</string>
    <string name="elCarro">Campo de futbol El Carro</string>
    <string name="piscina">Piscina municipal</string>
    <string name="fuente">Fuente de Cella</string>
    <string name="plazadetoros">Plaza de toros</string>
</resources>