<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="16dp"
    android:id="@+id/linear">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/ingresar"
            android:textAlignment="center"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/ingresar"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/red"/>
        <Button
            android:id="@+id/registrar"
            android:textAlignment="center"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/registrar"
            android:backgroundTint="@color/red"/>
    </LinearLayout>
    <Button
        android:id="@+id/google"
        android:textAlignment="center"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n_con_google"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"/>


</LinearLayout>