<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_weight="1"
                android:id="@+id/poke_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:layout_weight="1"
                android:id="@+id/forma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forma"
                android:textSize="10dp"
                android:textStyle="italic" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ataque"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defensa"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stamina"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ataque"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ataque"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/defensa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defensa"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/stamina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stamina"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            tools:ignore="MissingConstraints" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>